# hydrophonic_system

./: .gitignore  README.md  app.py  classes.json  convert_to_mobile.py  main.py  pyproject.toml  realtime_app.py  requirements.txt  run_app.sh  train.py
Final_Spinach_NPK_Dataset_Clean/: DATASET_SCAN_REPORT.md
