[project]
name = "disease-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.7",
    "notebook>=7.5.0",
    "pandas>=2.3.3",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "scikit-learn>=1.3.0",
    "streamlit>=1.25.0",
    "opencv-python>=4.8.0",
]
